testdata/Call.switch_vc/p2m_m/p2m_m.3.1.check
// hasErrors: true
-- Error: target/testdata/Call.switch_vc/p2m_m.scala:2:57 ----------------------
2 |class P2M_VC(val x: String) extends AnyVal with PU { def d() = "" }
  |                                                         ^
  |                  error overriding method d in trait PU of type => String;
  |                    method d of type (): String has incompatible type
1 error found
